fix video player problem on mobile devices;

--- a/_assets/stylesheets/application.css
+++ b/_assets/stylesheets/application.css
@@ -14,3 +14,6 @@
 .vjs-poster {
   background-color: #000;
 }
+a {
+  -webkit-tap-highlight-color:rgba(0,0,0,0);
+}
